# python-rabbitmq-exercise

./: README.md  config.py  consumer.py  consumer_email_newsletter.py  consumer_kyc.py  producer.py  publisher.py  pyproject.toml
rabbit/: base.py
rabbit/common/: __init__.py  email_updates_rabbit.py
