[project]
name = "python-rabbitmq-exercise"
version = "0.1.0"
description = ""
authors = [
    {name = "Goshan57",email = "485262323@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "pika-stubs (>=0.1.3,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
